[package]
name = "miniquad-tests"
version = "0.1.0"
edition = "2021"

[dependencies]
miniquad = { git = "https://github.com/not-fl3/miniquad.git", branch = "master" }
glam = "0.29"

[[bin]]
name = "window"
path = "src/bin/window.rs"

[[bin]]
name = "input"
path = "src/bin/input.rs"

[[bin]]
name = "graphics"
path = "src/bin/graphics.rs"

[[bin]]
name = "mouse"
path = "src/bin/mouse.rs"

[[bin]]
name = "wireframe"
path = "src/bin/wireframe.rs"

[[bin]]
name = "starfield"
path = "src/bin/starfield.rs"

[[bin]]
name = "viewport"
path = "src/bin/viewport.rs"

[[bin]]
name = "scrolltext"
path = "src/bin/scrolltext.rs"

[lib]
name = "miniquad_test_utils"
path = "src/lib.rs"
